<resources>
    <string name="app_name">Chromaton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Inicia sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="do_login">Iniciar Sesión</string>
    <string name="not_account_register">¿No tienes cuenta? Regístrate aquí</string>
    <string name="register">Regístrate</string>
    <string name="register_now">Registrarse</string>
    <string name="account_already_login">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="welcome">Bienvenido</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="name">Nombre de usuario</string>
    <string name="create_private_game">CREAR PARTIDA PRIVADA</string>
    <string name="join_game">UNIRSE A UNA PARTIDA</string>
</resources>