<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app_res="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app_res:icon="@drawable/ic_logout"
        app_res:layout_constraintEnd_toEndOf="parent"
        app_res:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app_res:layout_constraintBottom_toTopOf="@+id/llButtons"
        app_res:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¡Hola!"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."
            android:alpha="0.7"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app_res:layout_constraintBottom_toBottomOf="parent"
        app_res:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateGame"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/create_private_game"
            app_res:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnJoinGame"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:text="@string/join_game"
            app_res:cornerRadius="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>